# CRDC-SR-Approval-Agent

./: Dockerfile  README.md
fedlead_agent_crewai/: pyproject.toml
fedlead_agent_crewai/knowledge/: user_preference.txt
fedlead_agent_crewai/src/fedlead_agent_crewai/: crew.py  main.py
fedlead_agent_crewai/src/fedlead_agent_crewai/config/: agents.yaml
fedlead_agent_crewai/src/fedlead_agent_crewai/tools/: approve_sr_tool.py  bedrock_decision_tool.py  find_latest_sr_tool.py  login_tool.py  navigate_tool.py
fedlead_agent_crewai/src/fedlead_agent_crewai/utils/: log_utils.py  smart_fill.py
src/: setup.py
src/fedlead_agent_crewai/: main.py
src/fedlead_agent_crewai/config/: tasks.yaml
src/fedlead_agent_crewai/tools/: approve_sr_tool.py  bedrock_decision_tool.py  login_tool.py  navigate_tool.py
src/fedlead_agent_crewai/utils/: aws_client.py  session_manager.py  smart_click.py
