[project]
name = "fedlead_agent_crewai"
version = "0.1.0"
description = "fedlead_agent_crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0"
]

[project.scripts]
fedlead_agent_crewai = "fedlead_agent_crewai.main:run"
run_crew = "fedlead_agent_crewai.main:run"
train = "fedlead_agent_crewai.main:train"
replay = "fedlead_agent_crewai.main:replay"
test = "fedlead_agent_crewai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
